# kronos

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: broker.rs  data.rs  engine.rs  main.rs  strategy.rs
src/analytics/: metrics.rs  mod.rs  tracker.rs  trade.rs
src/broker/: broker.rs  execution.rs  fee.rs  mod.rs  order.rs  position.rs
src/routes/: run.rs
src/strategy/: sma_crossover.rs  wasm.rs
