[package]
name = "kronos"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum = "0.7.7"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
