[package]
name = "kronos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum =  "0.8.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wasmtime = "26.0"
